--- a/ATM5.0.html
+++ b/ATM5.0.html
@@ -6,7 +6,7 @@
     <title>atm machine</title>
     <style>
         body{
-            background-color: yellow;
+            background-color: blue;
         }
         #whole
 {
